# rusty-whisper

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/simple_inference/: main.rs
src/: audio.rs  decode.rs  lib.rs  tokenizers.rs  utils.rs
