[package]
name = "rusty-whisper"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Igor Yusupov"]
readme = "README.md"
keywords = [
    "deep-learning",
    "machine-learning",
    "speech recognition",
    "whisper",
]
description = "Rust implementation of Whisper"
repository = "https://github.com/igor-yusupov/rusty-yolo/"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "rusty_whisper"
path = "src/lib.rs"
crate-type = ["lib"]

[dependencies]
